# OOP_lab_1_

./: .pre-commit-config.yaml  README.md  oop-lab.code-workspace  pyproject.toml
examples/: examples.ipynb
src/lab_1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tasks/: class_Money.py  class_Triangle.py  task_1.py  task_2.py
tasks/triangle_package/: __init__.py  class_triangle.py
tests/: test_task_1.py  test_task_2.py  test_tasks.py
